syntax = "proto3";

// Public API for Hyades vulnerability analysis.
package org.hyades.vulnanalysis.v1;

option java_multiple_files = true;
option java_package = "org.hyades.proto.vulnanalysis.v1";

import "vuln_v1.proto";

message Component {
  // UUID of the component in the Dependency-Track database.
  // In case of an untracked component, a random UUID may be used.
  string uuid = 1;

  // Common Platform Enumeration (CPE) of the component.
  optional string cpe = 2;

  // Package URL (PURL) of the component.
  optional string purl = 3;

  // Software Identification (SWID) Tag ID of the component.
  optional string swid_tag_id = 4;

  // Whether the component is internal to the organization.
  // Internal components should not be looked up in external sources.
  bool internal = 5;
}

enum Scanner {
  SCANNER_NONE = 0;
  SCANNER_INTERNAL = 1;
  SCANNER_OSSINDEX = 2;
  SCANNER_SNYK = 3;
}

message ScanCommand {
  // Component that shall be scanned.
  Component component = 1;
}

message ScanKey {
  // A (preferably) random correlation ID in arbitrary format.
  string correlation_id = 1;

  // UUID of the component in the Dependency-Track database.
  string component_uuid = 2;
}

message ScanResult {
  // Key of the scan that produced this result.
  ScanKey key = 1;

  // The scanner that produced this result.
  Scanner scanner = 2;

  // Status of the scan.
  ScanStatus status = 3;

  // Vulnerabilities identified in the scan.
  repeated org.hyades.vuln.v1.Vulnerability vulnerabilities = 4;

  // Reason for scan failure.
  optional string failureReason = 5;
}

enum ScanStatus {
  SCAN_STATUS_UNKNOWN = 0;
  SCAN_STATUS_SUCCESSFUL = 1;
  SCAN_STATUS_FAILED = 2;
  SCAN_STATUS_PENDING = 3;
  SCAN_STATUS_COMPLETE = 4;
}