package org.hyades.processor.snyk;

import io.github.resilience4j.circuitbreaker.CircuitBreaker;
import io.github.resilience4j.core.IntervalFunction;
import io.micrometer.core.instrument.MeterRegistry;
import io.quarkus.cache.Cache;
import io.quarkus.cache.CacheName;
import org.apache.kafka.streams.processor.api.Processor;
import org.apache.kafka.streams.processor.api.ProcessorSupplier;
import org.apache.kafka.streams.state.KeyValueStore;
import org.apache.kafka.streams.state.StoreBuilder;
import org.eclipse.microprofile.rest.client.inject.RestClient;
import org.hyades.client.snyk.SnykClient;
import org.hyades.config.SnykConfig;
import org.hyades.processor.retry.RetryableRecord;
import org.hyades.proto.vulnanalysis.internal.v1beta1.ScanTask;
import org.hyades.proto.vulnanalysis.v1.ScanKey;
import org.hyades.proto.vulnanalysis.v1.ScanResult;

import javax.enterprise.context.ApplicationScoped;
import javax.inject.Inject;
import javax.inject.Named;
import java.util.Set;

@ApplicationScoped
public class SnykProcessorSupplier implements ProcessorSupplier<String, ScanTask, String, ScanResult> {

    private final SnykClient client;
    private final SnykConfig config;
    private final Cache cache;
    private final CircuitBreaker circuitBreaker;
    private final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> batchStoreBuilder;
    private final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> retryStoreBuilder;
    private final IntervalFunction retryIntervalFunction;
    private final MeterRegistry meterRegistry;

    @Inject
    public SnykProcessorSupplier(final @RestClient SnykClient client,
                                 final SnykConfig config,
                                 @CacheName("snyk") final Cache cache,
                                 @Named("snykCircuitBreaker") final CircuitBreaker circuitBreaker,
                                 @Named("snykBatchStoreBuilder") final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> batchStoreBuilder,
                                 @Named("snykRetryStoreBuilder") final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> retryStoreBuilder,
                                 @Named("snykRetryIntervalFunction") final IntervalFunction retryIntervalFunction,
                                 final MeterRegistry meterRegistry) {
        this.client = client;
        this.config = config;
        this.cache = cache;
        this.circuitBreaker = circuitBreaker;
        this.batchStoreBuilder = batchStoreBuilder;
        this.retryStoreBuilder = retryStoreBuilder;
        this.retryIntervalFunction = retryIntervalFunction;
        this.meterRegistry = meterRegistry;
    }

    @Override
    public Processor<String, ScanTask, String, ScanResult> get() {
        return new SnykProcessor(client, config, cache, circuitBreaker, config.severitySource(),
                batchStoreBuilder.name(), retryStoreBuilder.name(), retryIntervalFunction, config.retry().maxAttempts(),
                meterRegistry);
    }

    @Override
    public Set<StoreBuilder<?>> stores() {
        return Set.of(batchStoreBuilder, retryStoreBuilder);
    }

}
